// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewReceipt should render error when fetch from API fails 1`] = `
<div>
  <div
    class="wcpay-card-readers-preview-receipt-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-card__body components-card-body css-5spj1a-View-Body-borderRadius-small em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            class="components-notice is-error"
          >
            <div
              class="components-notice__content"
            >
              There was a problem generating the receipt preview. Please try again later.
              <div
                class="components-notice__actions"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`PreviewReceipt should render loading block while fetching from API 1`] = `
<div>
  <div
    class="wcpay-card-readers-preview-receipt-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-card__body components-card-body css-5spj1a-View-Body-borderRadius-small em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <p>
            Generating preview.
          </p>
          <span
            aria-busy="true"
            class="is-loadable-placeholder is-block"
          >
            <p
              style="line-height: 25;"
            >
              Block placeholder
            </p>
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`PreviewReceipt should render preview when fetch from API succeeds 1`] = `
<div>
  <div
    class="wcpay-card-readers-preview-receipt-page woocommerce-payments-page is-narrow"
  >
    <div
      class="components-surface components-card css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="css-mgwsf4-View-Content em57xhy0"
      >
        <div
          class="components-card__body components-card-body css-5spj1a-View-Body-borderRadius-small em57xhy0"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <iframe
            class="card-readers-preview-receipt__preview"
            srcdoc="<!DOCTYPE html>"
            title="Preview Receipt"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
